# Russian-Fishing-4-Offline-Maps

./: About.cpp  About.h  About.ui  CMakeLists.txt  CreatePoint.cpp  CreatePoint.h  CreatePoint.ui  FoundPoint.cpp  FoundPoint.h  LICENSE  License.cpp  License.h  License.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Map.cpp  Map.h  MapSetup.cpp  MapSetup.h  MapSetup.ui  MapsManager.cpp  MapsManager.h  MapsManager.ui  Point.cpp  Point.h  Point.ui  QLabelClearTextTimer.cpp  QLabelClearTextTimer.h  QLabelEventGetPoint.cpp  QLabelEventGetPoint.h  WaterBody.cpp  WaterBody.h  main.cpp  resource.qrc
